fixed CSS so buttons align and colours, font sizes etc. are consistent

--- a/src/pages/landingPage/landingPage.css
+++ b/src/pages/landingPage/landingPage.css
@@ -13,7 +13,7 @@ body {
 #emailBox {
   background-color: rgb(255, 255, 255, 100%);
   position: absolute;
-  top: 49%;
+  top: 57%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
@@ -34,7 +34,7 @@ body {
 #passwordBox {
   background-color: rgb(255, 255, 255, 100%);
   position: absolute;
-  top: 57%;
+  top: 63%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
@@ -65,7 +65,7 @@ body {
 #loginBtn {
   background-color: rgba(26, 46, 42, 1);
   position: absolute;
-  top: 67%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
@@ -87,7 +87,7 @@ body {
 #signUpBtn {
   background-color: rgba(26, 46, 42, 1);
   position: absolute;
-  top: 75%;
+  top: 76%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
@@ -118,9 +118,9 @@ body {
 
 .box1 {
   position: fixed;
-  width: 532px;
-  height: 568px;
-  background-color: rgba(242, 239, 224, 0.66);
+  width: 575px;
+  height: 700px;
+  background-color: rgb(239, 233, 219, 60%);
   padding: 20px;
   border-radius: 65px;
   text-align: center;
@@ -128,12 +128,12 @@ body {
 
 .box2 {
   position: fixed;
-  width: 499px;
-  height: 532px;
-  background-color: rgba(242, 239, 224, 1);
+  width: 550px;
+  height: 675px;
+  background-color: rgb(239, 233, 219, 100%);
   border-radius: 65px;
   text-align: center;
-  padding-top: 24px;
+  padding-top: 14px;
   font-size: 60px;
   font-weight: 900;
 }
@@ -145,17 +145,17 @@ body {
 
 .box3 {
   position: fixed;
-  top: -159px;
+  top: -25px;
   width: 300px;
   height: 60px;
   text-align: center;
-  font-size: 18px;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .box4 {
   position: fixed;
-  top: -112px;
+  top: 5px;
   width: 250px;
   height: 60px;
   text-align: center;
